src/objects/OrderRatePlan__c/OrderRatePlan__c.object-meta.xml
<CustomObject>
    <label>Order Rate Plan</label>
    <nameField>
        <displayFormat>ORT-{00000}</displayFormat>
        <label>Order Rate Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Rate Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>