src/objects/OrderRatePlan__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>Order_Line__c</referenceTo>
    <relationshipLabel>Order Rate Plans</relationshipLabel>
    <relationshipName>Order_Rate_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>